Closed
Bug 1225381
Opened 10 years ago
Closed 10 years ago
Canvas mozCurrentTransformInverse & fillText: SkFixed.h:46: failed assertion "n64 == n32"
Categories
(Core :: Graphics: Canvas2D, defect)
Core
Graphics: Canvas2D
Tracking
()
RESOLVED
FIXED
mozilla45
| Tracking | Status | |
|---|---|---|
| firefox45 | --- | fixed |
People
(Reporter: jruderman, Assigned: lsalzman)
References
Details
(Keywords: assertion, testcase)
Attachments
(3 files)
gfx/skia/skia/include/core/SkFixed.h:46: failed assertion "n64 == n32"
Thanks to Lee Salzman for fixing the previous instance in bug 1190705 ;)
| Reporter | ||
Comment 1•10 years ago
|
||
I see "SkScalerContext_Mac" on the stack, so this might be Mac-specific (in addition to Skia-specific).
| Assignee | ||
Comment 2•10 years ago
|
||
This is just basically a new case of bug 1190705. We need to ensure the supplied matrix is finite, otherwise stuff blows up downwind.
The patch adds some new checks as well as adds the testcase as a crashtest.
Updated•10 years ago
|
Attachment #8688526 -
Flags: review?(jmuizelaar) → review+
| Assignee | ||
Comment 3•10 years ago
|
||
| Assignee | ||
Updated•10 years ago
|
Keywords: checkin-needed
Keywords: checkin-needed
Comment 5•10 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla45
You need to log in
before you can comment on or make changes to this bug.
Description
•