Bug 1225381 - ensure mozCurrentTransform is finite. r=jmuizelaar